fixed topbar responsiveness,and  added and applied is-block and nowrap rules to media queries

--- a/css/custom.css
+++ b/css/custom.css
@@ -180,22 +180,41 @@ footer {
 	top: -50px;
 }
 
-@media all and (max-width: 630px) {
-	.chmlogo {
-		margin-top: 3%;
-		margin-bottom: 2%;
-		width: 70%;
-	}
+.sharethis {
+	float: right;
+}
+
+/*	MEDIA QUERIES 	*/
+@media all and (max-width: 965px) {
+
 }
 
 @media all and (max-width: 768px) {
+	.chmlogo {
+		margin-top: 3%;
+		margin-bottom: 2%;
+		width: 75%;
+	}
+
+	.sharethis {
+		float: none;
+	}
+}
+
+@media all and (max-width: 630px) {
+	.is-block {
+		display: block;
+	}
+
+	.nowrap {
+		white-space: nowrap;
+	}
+}
+
+@media all and (max-width: 480px) {
 
 }
 
 @media all and (max-width: 320px) {
-
-}
-
-@media all and (max-width: 480px) {
 
 }
